<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/submit_compaints_background"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/fragment_feedback_tv_txt_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_txt"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_18" />

    <EditText
        android:id="@+id/fragment_feedback_et_my_comment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="left|top"
        android:layout_marginTop="20dp"
        android:background="@color/submit_compaints_field_background"
        android:hint="@string/my_comments"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="@color/submit_compaints_text_gray"
        android:textSize="@dimen/font_size_18" />

    <Button
        android:id="@+id/fragment_feedback_btn_send"
        android:layout_width="250dp"
        android:gravity="center"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/actionbar_color"
        android:hint="@string/notes"
        android:padding="6dp"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_18"
        android:textStyle="bold" />

</LinearLayout>
