<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subscription_background" >

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/not_subscribed_ll"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/subscription_description_text"
            android:id="@+id/InfoTextNotSubscribed"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/onemonthbtn"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/actionbar_color"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:text="@string/one_month_subscription"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />
        <Button
            android:id="@+id/sixmonthsbtn"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/actionbar_color"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:text="@string/six_months_subscription"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />
        <Button
            android:id="@+id/oneyearbtn"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/actionbar_color"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:text="@string/one_year_subscription"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/subscribed_ll"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/subscription_description_text"
            android:id="@+id/InfoTextSubscribed"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Status Text 1"
            android:id="@+id/statusText1"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Status Text 2"
            android:id="@+id/statusText2"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/subscribed_ll"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
