<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="15dp" >

    <Button
        android:id="@+id/frgment_setting_bnt_sync_with_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/setting_sync_button"
        android:text="@string/sync_with_email"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_22"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/block_calls"
            android:textColor="@color/setting_block_call_font"
            android:textSize="@dimen/font_size_20" />

        <ToggleButton
            android:id="@+id/fragment_settings_toggle_block_calls"
            style="@style/Swith_theme"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@drawable/bg_button_toggle"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/block_area_contry"
            android:textColor="@color/setting_block_call_font"
            android:textSize="@dimen/font_size_20" />

        <ToggleButton
            android:id="@+id/fragment_settings_toggle_block_area_country"
            style="@style/Swith_theme"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@drawable/bg_button_toggle"
            android:checked="false" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/fragment_settings_debug_reset_app_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="Reset Settings (debug)"
                android:textColor="@color/setting_block_call_font"
                android:textSize="@dimen/font_size_20"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/fragment_settings_debug_reset_app"
                style="@style/Swith_theme"
                android:text="Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:visibility="gone"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/fragment_settings_debug_force_sync_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Force Sync (debug)"
            android:textColor="@color/setting_block_call_font"
            android:textSize="@dimen/font_size_20"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/fragment_settings_debug_force_sync"
            style="@style/Swith_theme"
            android:text="Force Sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:visibility="gone"
            />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/fragment_setting_el_country_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:groupIndicator="@android:color/transparent"
        android:background="@drawable/bg_country_area_border" />

</LinearLayout>